[metadata]
name= cywrap
url= https://ousttrue.github.io/cywrap/
project_urls=
    source= https://github.com/ousttrue/cywrap
description= parse cpp by libclang and generate cython wraper
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
classifiers=
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
include_package_data = True

[options]
packages=find:
package_dir=
    =src
install_requires = 

[options.entry_points]
gui_scripts =
    cywrap = cywrap:run
